--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/ui": "^2.16.0",
     "nuxt": "^3.11.2",
+    "nuxt-mongoose": "^1.0.6",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   }
