--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@nuxt/ui": "^2.16.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "jose": "^5.3.0",
+    "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.11.2",
     "nuxt-mongoose": "^1.0.6",
     "vue": "^3.4.27",
