--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "nuxt-mongoose": "^1.0.6",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.6"
   }
 }
